codama-macros/tests/codama_attribute/node_directive/type_nodes/number_type_node/unrecognized_attribute.fail.stderr
error: unrecognized attribute
 --> tests/codama_attribute/node_directive/type_nodes/number_type_node/unrecognized_attribute.fail.rs:3:32
  |
3 | #[codama(node(number_type(u32, unrecognized = 42, le)))]
  |                                ^^^^^^^^^^^^
