codama-macros/tests/codama_attribute/node_directive/type_nodes/number_type_node/unrecognized_attribute.fail.rs
use codama::codama;

#[codama(node(number_type(u32, unrecognized = 42, le)))]
pub struct Test;

fn main() {}
